
- Issue #7094: Added alternate formatting (specified by '#') to
  __format__ method of float, complex, and Decimal. This allows more
  precise control over when decimal points are displayed.

- Issue #10474: range().count() should return integers.

- Issue #1574217: isinstance now catches only AttributeError, rather than
  masking all errors.

Library
-------

- Issue #4925: Add filename to error message when executable can't be found in
  subprocess.

- Issue #10391: Don't dereference invalid memory in error messages in the ast
  module.

- Issue #10027: st_nlink was not being set on Windows calls to os.stat or
  os.lstat. Patch by Hirokazu Yamamoto.

- Issue #9333: Expose os.symlink only when the SeCreateSymbolicLinkPrivilege
  is held by the user's account, i.e., when the function can actually be used.

- Issue #8879: Add os.link support for Windows.

- Issue #7911: `unittest.TestCase.longMessage` defaults to True for improved
  failure messages by default. Patch by Mark Roddy.
 
- Issue #1486713: HTMLParser now has an optional tolerant mode where it
  tries to guess at the correct parsing of invalid html.

- Issue #10554: Add context manager support to subprocess.Popen objects.

- Issue #8989: email.utils.make_msgid now has a domain parameter that can
  override the domain name used in the generated msgid.

- Issue #9299: Add exist_ok parameter to os.makedirs to suppress the
  'File exists' exception when a target directory already exists with the
  specified mode. Patch by Ray Allen.

- Issue #9573: os.fork() now works correctly when triggered as a side effect
  of a module import

- Issue #10464: netrc now correctly handles lines with embedded '#' characters.

- Added itertools.accumulate().

- Issue #4113: Added custom ``__repr__`` method to ``functools.partial``.
  Original patch by Daniel Urban.

- Issue #10273: Rename `assertRegexpMatches` and `assertRaisesRegexp` to
  `assertRegex` and `assertRaisesRegex`.
